# ai-dev-toolbox

./: .gitignore  README.md
fastapi/: README.md  api_versioning.md  avoid.md  best_practices.md  commands.md  dependency_injection.md  intro.md  makefile.md
fastapi/auths/: README.md
fastapi/jwt/: README.md  app.py
fastapi/live_chat_room/: NOTE.md  README  db.py  main.py  models.py  routes.py  schemas.py  token.py  ws.py
fastapi/websocket/: Makefile  README.md  server.py
next-js/: Makefile
next-js/backend/: database.db  main.py  models.py  schemas.py  utils.py
python-tools/: README  pypi_transformers.ipynb
side_projects/: Makefile  README.md  pyproject.toml
side_projects/resume_analyzer/: .gitignore  Makefile  README.md  package-lock.json  package.json
side_projects/resume_analyzer/api/: README  main.py  routers.py
side_projects/resume_analyzer/api/core/: settings.py
side_projects/resume_analyzer/api/services/: __init__.py  analyzer.py  inference.py
side_projects/resume_analyzer/app/: globals.css  layout.tsx
side_projects/resume_analyzer/app/(home)/: page.tsx
side_projects/resume_analyzer/components/: Review.tsx
side_projects/resume_analyzer/components/forms/: ResumeUploadForm.tsx
side_projects/resume_analyzer/services/: analyze.service.ts
side_projects/search_with_documents/: README  db.py  main.py  model_download.py  models.py  routes.py  schemas.py  settings.py
side_projects/search_with_documents/rag/: __init__.py  generation.py  indexing.py  preprocessor.py
side_projects/search_with_documents/ui/: index.html  script.js
(+88 files in other folders)
