[project]
name = "genai-projects"
version = "0.1.0"
description = "project i'm doing for learning."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.13",
    "doc2txt>=1.0.6",
    "docx2txt>=0.9",
    "fastapi>=0.115.13",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.26",
    "langchain-huggingface>=0.3.0",
    "llama-cpp-python>=0.3.9",
    "pypdf>=5.6.1",
    "python-multipart>=0.0.20",
    "sentence-transformers>=4.1.0",
    "torch>=2.7.1",
    "uvicorn>=0.34.3",
]
